Closed
Bug 1103648
Opened 11 years ago
Closed 11 years ago
PlatformDecoderModule::Shutdown() is no longer being called
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla36
People
(Reporter: cpearce, Assigned: cpearce)
References
Details
Attachments
(1 file)
|
1.67 KB,
patch
|
mattwoodrow
:
review+
|
Details | Diff | Splinter Review |
Bug 1038031's patch to make the MP4Reader async removed the call to PDM::Shutdown(). It also made the PDM destroyed on the main thread, we can put this back on the decode thread like it was before bug 1038031 landed, as the reason why it had to be OMT was removed in bug 1047824, which was fixed after I initially wrote the patch for bug 1038031...
This manifests as an assertion in the EME PDM's dtor when it deletes its task queue, as it complains that the task queue has not been shutdown (because PDM::Shutdown() wasn't called). This only happens when using the EME non-wrapping the platform's PDM, i.e. not the path we (currently) take on our test infrastructure.
I'll upload a patch...
| Assignee | ||
Comment 1•11 years ago
|
||
Attachment #8527361 -
Flags: review?(matt.woodrow)
| Assignee | ||
Comment 2•11 years ago
|
||
s/1038031/1032633/g
Updated•11 years ago
|
Attachment #8527361 -
Flags: review?(matt.woodrow) → review+
| Assignee | ||
Comment 3•11 years ago
|
||
Comment 4•11 years ago
|
||
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
| Assignee | ||
Comment 5•11 years ago
|
||
Mass update firefox-status to track EME uplift.
You need to log in
before you can comment on or make changes to this bug.
Description
•