Bug 1103648 - Ensure we call PlatformDecoderModule::Shutdown on the decode task queue. r=mattwoodrow